Added user component and template Added basic code for all other components Added bootstrap classes to some elements

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
   <script src="client/components/repList.js"></script>
   <script src="client/components/repListEntry.js"></script>
   <script src="client/components/repProfile.js"></script>
+  <script src="client/components/user.js"></script>
   <script src="client/components/search.js"></script>
 </body>
 </html>
