Passed search data to repList and repList entry Changed variable names for clarity

--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <title>RepConnect</title>
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <script src="bower_components/angular/angular.min.js"></script>
 </head>
-<body ng-controller="AppCtrl">
+<body>
   <app ng-app="repConnect"></app>
   <script src="client/index.js"></script>
   <script src="client/config/apiKey.js"></script>
