Changed user component to saved component

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,12 @@
   <script src="client/index.js"></script>
   <script src="client/config/apiKey.js"></script>
   <script src="client/services/civicInfo.js"></script>
+  <script src="client/services/savedLocs.js"></script>
   <script src="client/components/app.js"></script>
   <script src="client/components/repList.js"></script>
   <script src="client/components/repListEntry.js"></script>
   <script src="client/components/repProfile.js"></script>
-  <script src="client/components/user.js"></script>
+  <script src="client/components/saved.js"></script>
   <script src="client/components/search.js"></script>
 </body>
 </html>
