Implemented dropdown for saved locations Need to fix duplicate entries getting saved to db

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/underscore/underscore-min.js"></script>
 </head>
 <body>
   <app ng-app="repConnect"></app>
